--- a/Documents/监控程序.md
+++ b/Documents/监控程序.md
@@ -1,15 +1,15 @@
 # 监控程序模板
 [Unit]
-Description=Inledco Admin Web API
+Description=Admin Admin Web API
 
 [Service]
-WorkingDirectory=/var/www/inledcoadmin
-ExecStart=/usr/bin/dotnet /var/www/inledcoadmin/inledco.dll
+WorkingDirectory=/var/www/admin
+ExecStart=/usr/bin/dotnet /var/www/admin/admin.dll
 Restart=always
 # Restart service after 10 seconds if the dotnet service crashes
 RestartSec=10
 KillSignal=SIGINT
-SyslogIdentifier=dotnet-inledco-admin-api
+SyslogIdentifier=dotnet-admin-admin-api
 User=zhengguo
 Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
