--- a/Documents/常用命令.md
+++ b/Documents/常用命令.md
@@ -1,4 +1,4 @@
-部署到测试服务器的时候
+# 部署到测试服务器的时候
 Environment 设置为 Development
 修改 Daemon 后，运行 systemctl daemon-reloa 重新加载配置
 重新启动 systemctl restart web-api-admin.service
@@ -6,6 +6,6 @@ Environment 设置为 Development
 启动 systemctl start web-api-admin.service
 停止 systemctl stop web-api-admin.service
 
-查看日志
+## 查看日志
 sudo journalctl -fu kestrel-helloapp.service
 sudo journalctl -fu kestrel-helloapp.service --since "2016-10-18" --until "2016-10-18 04:00"
